force-app/main/default/objects/Object_Visualizer__mdt/Object_Visualizer__mdt.object-meta.xml
<CustomObject>
    <description>Allows for object drill down.</description>
    <label>Object Visualizer</label>
    <pluralLabel>Ojbect Visualizers</pluralLabel>
</CustomObject>