force-app/main/default/objects/Object_Visualizer__mdt/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <label>DeveloperName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>