force-app/main/default/objects/Object_Visualizer__mdt/fields/Last_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Updated__c</fullName>
    <description>Last date the associated objects were created</description>
    <label>Last Date Updated</label>
    <type>Date</type>
</CustomField>