force-app/main/default/objects/Object_Visualizer__mdt/fields/Object_Related_Objects__c.field-meta.xml
<CustomField>
    <fullName>Object_Related_Objects__c</fullName>
    <label>Object Related Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>